[package]
name = "server_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_rust"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
